--- a/tgbot/templates/admin/broadcast_message.html
+++ b/tgbot/templates/admin/broadcast_message.html
@@ -6,5 +6,5 @@
     <input type="hidden" name="action" value="broadcast" />
     <input type="submit" name="apply" value="Send" />
 </form>
-{% endblock %}
+{% endblock content %}
 
